--- a/stablesolver/algorithms/BUILD
+++ b/stablesolver/algorithms/BUILD
@@ -5,18 +5,17 @@ cc_library(
         name = "algorithms",
         hdrs = [
                 "greedy.hpp",
-                "localsearch.hpp",
                 "branchandcut_cplex.hpp",
                 "algorithms.hpp",
         ],
         srcs = [
                 "greedy.cpp",
-                "localsearch.cpp",
                 "branchandcut_cplex.cpp",
                 "algorithms.cpp",
         ],
         deps = [
                 "//stablesolver:stablesolver",
+                "//cliquesolver/algorithms:algorithms",
         ] + CPLEX_DEP,
         copts = CPLEX_COPTS,
         visibility = ["//visibility:public"],
