--- a/stablesolver/algorithms/BUILD
+++ b/stablesolver/algorithms/BUILD
@@ -7,6 +7,7 @@ cc_library(
                 "greedy.hpp",
                 "branchandcut_cplex.hpp",
                 "localsearch.hpp",
+                "largeneighborhoodsearch.hpp",
                 "decisiondiagram.hpp",
                 "algorithms.hpp",
         ],
@@ -14,6 +15,7 @@ cc_library(
                 "greedy.cpp",
                 "branchandcut_cplex.cpp",
                 "localsearch.cpp",
+                "largeneighborhoodsearch.cpp",
                 "decisiondiagram.cpp",
                 "algorithms.cpp",
         ],
