--- a/stablesolver/algorithms/BUILD
+++ b/stablesolver/algorithms/BUILD
@@ -2,27 +2,70 @@ load("//stablesolver:variables.bzl", "STDCPP",
          "CPLEX_COPTS", "CPLEX_DEP", "CPOPTIMIZER_DEP")
 
 cc_library(
-        name = "algorithms",
-        hdrs = [
-                "greedy.hpp",
-                "milp_cplex.hpp",
-                "localsearch_rowweighting.hpp",
-                "largeneighborhoodsearch.hpp",
-                "algorithms.hpp",
-        ],
-        srcs = [
-                "greedy.cpp",
-                "milp_cplex.cpp",
-                "localsearch_rowweighting.cpp",
-                "largeneighborhoodsearch.cpp",
-                "algorithms.cpp",
-        ],
+        name = "greedy",
+        hdrs = ["greedy.hpp"],
+        srcs = ["greedy.cpp"],
+        deps = ["//stablesolver:stablesolver"],
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
+        name = "milp_cplex",
+        hdrs = ["milp_cplex.hpp"],
+        srcs = ["milp_cplex.cpp"],
         deps = [
                 "//stablesolver:stablesolver",
                 "//cliquesolver/algorithms:algorithms",
-                "@boost//:program_options",
         ] + CPLEX_DEP,
         copts = CPLEX_COPTS,
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
+        name = "localsearch",
+        hdrs = ["localsearch.hpp"],
+        srcs = ["localsearch.cpp"],
+        deps = [
+                "//stablesolver:stablesolver",
+                "@localsearchsolver//localsearchsolver:localsearchsolver",
+        ],
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
+        name = "localsearch_rowweighting",
+        hdrs = ["localsearch_rowweighting.hpp"],
+        srcs = ["localsearch_rowweighting.cpp"],
+        deps = [
+                ":greedy",
+                "//stablesolver:stablesolver",
+        ],
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
+        name = "largeneighborhoodsearch",
+        hdrs = ["largeneighborhoodsearch.hpp"],
+        srcs = ["largeneighborhoodsearch.cpp"],
+        deps = [
+                ":greedy",
+                "//stablesolver:stablesolver",
+        ],
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
+        name = "algorithms",
+        hdrs = ["algorithms.hpp"],
+        srcs = ["algorithms.cpp"],
+        deps = [
+                ":greedy",
+                ":milp_cplex",
+                ":localsearch",
+                ":localsearch_rowweighting",
+                ":largeneighborhoodsearch",
+                "@boost//:program_options",
+        ],
         visibility = ["//visibility:public"],
 )
 
