--- a/cliquesolver/algorithms/BUILD
+++ b/cliquesolver/algorithms/BUILD
@@ -2,20 +2,21 @@ load("//stablesolver:variables.bzl", "STDCPP",
          "CPLEX_COPTS", "CPLEX_DEP", "CPOPTIMIZER_DEP")
 
 cc_library(
+        name = "greedy",
+        hdrs = ["greedy.hpp"],
+        srcs = ["greedy.cpp"],
+        deps = ["//cliquesolver:cliquesolver"],
+        visibility = ["//visibility:public"],
+)
+
+cc_library(
         name = "algorithms",
-        hdrs = [
-                "greedy.hpp",
-                "algorithms.hpp",
-        ],
-        srcs = [
-                "greedy.cpp",
-                "algorithms.cpp",
-        ],
+        hdrs = ["algorithms.hpp"],
+        srcs = ["algorithms.cpp"],
         deps = [
-                "//cliquesolver:cliquesolver",
+                ":greedy",
                 "@boost//:program_options",
-        ] + CPLEX_DEP,
-        copts = CPLEX_COPTS,
+        ],
         visibility = ["//visibility:public"],
 )
 
