Move penalties outside of Solution

--- a/stablesolver/algorithms/BUILD
+++ b/stablesolver/algorithms/BUILD
@@ -65,7 +65,8 @@ cc_library(
                 ":localsearch_rowweighting",
                 ":largeneighborhoodsearch",
                 "@boost//:program_options",
-        ],
+        ] + CPLEX_DEP,
+        copts = CPLEX_COPTS,
         visibility = ["//visibility:public"],
 )
 
