--- a/.bazelrc
+++ b/.bazelrc
@@ -5,5 +5,6 @@ build --cxxopt=-Wall --cxxopt=-Wextra
 ############################ Optional dependencies #############################
 ################################################################################
 
+#build --define coinor=true
 #build --define cplex=true
 
