Add instance builder

--- a/stablesolver/BUILD
+++ b/stablesolver/BUILD
@@ -7,10 +7,12 @@ cc_library(
         name = "stablesolver",
         hdrs = [
                 "instance.hpp",
+                "instance_builder.hpp",
                 "solution.hpp",
         ],
         srcs = [
                 "instance.cpp",
+                "instance_builder.cpp",
                 "solution.cpp",
         ],
         deps = [
