--- a/.bazelrc
+++ b/.bazelrc
@@ -5,6 +5,6 @@ build --compilation_mode=opt
 ############################ Optional dependencies #############################
 ################################################################################
 
-#build --define coinor=true
+#build --define cbc=true
 #build --define cplex=true
 
