--- a/stablesolver/clique/BUILD
+++ b/stablesolver/clique/BUILD
@@ -5,13 +5,14 @@ cc_library(
         hdrs = [
                 "instance.hpp",
                 "solution.hpp",
+                "algorithm_formatter.hpp",
         ],
         srcs = [
                 "instance.cpp",
                 "solution.cpp",
+                "algorithm_formatter.cpp",
         ],
         deps = [
-                "@optimizationtools//optimizationtools/utils:info",
                 "@optimizationtools//optimizationtools/utils:utils",
                 "@optimizationtools//optimizationtools/containers:containers",
                 "@optimizationtools//optimizationtools/graph:graph",
@@ -23,11 +24,13 @@ cc_binary(
         name = "main",
         srcs = ["main.cpp"],
         deps = [
-                "//stablesolver/clique/algorithms:algorithms",
+                "//stablesolver/clique/algorithms:greedy",
+                "//stablesolver/clique/algorithms:milp_cplex",
+                "//stablesolver/clique/algorithms:local_search",
+                "@boost//:program_options",
         ],
         linkopts = select({
                     "@bazel_tools//src/conditions:windows": [],
                     "//conditions:default": ["-lpthread"],
         }),
 )
-
