--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8"]
@@ -23,6 +24,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install nauty
+      run: sudo apt-get install -y libnauty2-dev
+      if: matrix.os == 'ubuntu-latest'
     - name: Download data
       run: |
         python3 -m pip install gdown
