--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8"]
+
+    env:
+      STABLE_DATA: ${{ github.workspace }}/data/
 
     steps:
     - name: Checkout code
@@ -20,12 +24,29 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install nauty
+      run: sudo apt-get install -y libnauty2-dev
+      if: matrix.os == 'ubuntu-latest'
     - name: Download data
       run: |
         python3 -m pip install gdown
         python3 scripts/download_data.py
     - name: Build
-      run: bazel build -- //...
+      run: |
+        cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+        cmake --build build --config Release --parallel
+        cmake --install build --config Release --prefix install
+    - name: Copy CLP libraries (Darwin)
+      run: |
+        mkdir -p "/Users/runner/work/Osi/Osi/dist/lib"
+        cp -rf "${GITHUB_WORKSPACE}/build/_deps/mathoptsolverscmake-build/extern/Osi-prefix/src/Osi/lib/" "/Users/runner/work/Osi/Osi/dist/lib"
+        mkdir -p "/Users/runner/work/CoinUtils/CoinUtils/dist/lib"
+        cp -rf "${GITHUB_WORKSPACE}/build/_deps/mathoptsolverscmake-build/extern/CoinUtils-prefix/src/CoinUtils/lib/" "/Users/runner/work/CoinUtils/CoinUtils/dist/lib"
+        mkdir -p "/Users/runner/work/Clp/Clp/dist/lib"
+        cp -rf "${GITHUB_WORKSPACE}/build/_deps/mathoptsolverscmake-build/extern/Clp-prefix/src/Clp/lib/" "/Users/runner/work/Clp/Clp/dist/lib"
+        mkdir -p "/Users/runner/work/Cbc/Cbc/dist/lib"
+        cp -rf "${GITHUB_WORKSPACE}/build/_deps/mathoptsolverscmake-build/extern/Cbc-prefix/src/Cbc/lib/" "/Users/runner/work/Cbc/Cbc/dist/lib"
+      if: matrix.os == 'macos-latest'
     - name: Run tests
       run: python3 -u scripts/run_tests.py test_results
     - name: Checkout main branch
@@ -34,8 +55,8 @@ jobs:
         git fetch --depth 1
         git checkout master
     - name: Build
-      run: bazel build -- //...
+      run: bazel build -- //stablesolver/...
     - name: Run tests
       run: python3 -u scripts/run_tests.py test_results_ref
     - name: Process tests
-      run: python3 ./bazel-stablesolver/external/optimizationtools/scripts/process_tests.py --ref test_results_ref --new test_results
+      run: python3 -u ./build/_deps/optimizationtools-src/scripts/process_tests.py --ref test_results_ref --new test_results
