Update MILP models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,18 @@ cmake_minimum_required(VERSION 3.28)
 
 project(StableSolver LANGUAGES CXX)
 
-option(STABLESOLVER_USE_CBC "Use CPLEX" ON)
-option(STABLESOLVER_USE_CPLEX "Use CPLEX" OFF)
+option(STABLESOLVER_BUILD_MAIN "Build main" ON)
+option(STABLESOLVER_BUILD_TEST "Build the unit tests" ON)
+
+option(STABLESOLVER_USE_CBC "Use Cbc" OFF)
+option(STABLESOLVER_USE_HIGHS "Use HiGHS" ON)
+option(STABLESOLVER_USE_XPRESS "Use FICO Xpress" OFF)
 
 # Avoid FetchContent warning.
 cmake_policy(SET CMP0135 NEW)
 
-# Require C++11.
-set(CMAKE_CXX_STANDARD 11)
+# Require C++14.
+set(CMAKE_CXX_STANDARD 14)
 
 # Enable output of compile commands during generation.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
