--- a/src/clique/CMakeLists.txt
+++ b/src/clique/CMakeLists.txt
@@ -18,13 +18,8 @@ target_sources(StableSolver_clique_main PRIVATE
     main.cpp)
 target_link_libraries(StableSolver_clique_main PUBLIC
     StableSolver_clique_greedy
+    StableSolver_clique_milp
     StableSolver_clique_local_search
     Boost::program_options)
-if(STABLESOLVER_USE_CPLEX)
-    target_compile_definitions(StableSolver_clique_main PUBLIC
-        CPLEX_FOUND=1)
-    target_link_libraries(StableSolver_clique_main PUBLIC
-        StableSolver_clique_milp_cplex)
-endif()
 set_target_properties(StableSolver_clique_main PROPERTIES OUTPUT_NAME "stablesolver_clique")
 install(TARGETS StableSolver_clique_main)
