--- a/src/stable/CMakeLists.txt
+++ b/src/stable/CMakeLists.txt
@@ -20,21 +20,10 @@ target_sources(StableSolver_stable_main PRIVATE
     main.cpp)
 target_link_libraries(StableSolver_stable_main PUBLIC
     StableSolver_stable_greedy
+    StableSolver_stable_milp
     StableSolver_stable_local_search
     StableSolver_stable_local_search_row_weighting
     StableSolver_stable_large_neighborhood_search
     Boost::program_options)
-if(STABLESOLVER_USE_CBC)
-    target_compile_definitions(StableSolver_stable_main PUBLIC
-        CBC_FOUND=1)
-    target_link_libraries(StableSolver_stable_main PUBLIC
-        StableSolver_stable_milp_cbc)
-endif()
-if(STABLESOLVER_USE_CPLEX)
-    target_compile_definitions(StableSolver_stable_main PUBLIC
-        CPLEX_FOUND=1)
-    target_link_libraries(StableSolver_stable_main PUBLIC
-        StableSolver_stable_milp_cplex)
-endif()
 set_target_properties(StableSolver_stable_main PROPERTIES OUTPUT_NAME "stablesolver_stable")
 install(TARGETS StableSolver_stable_main)
