--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -11,14 +11,42 @@ FetchContent_Declare(
     EXCLUDE_FROM_ALL)
 FetchContent_MakeAvailable(Boost)
 
+# Fetch googletest.
+if(STABLESOLVER_BUILD_TEST)
+    FetchContent_Declare(
+            googletest
+            URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip)
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    set(INSTALL_GTEST OFF)
+    FetchContent_MakeAvailable(googletest)
+endif()
+
 # Fetch fontanf/optimizationtools.
+set(OPTIMIZATIONTOOLS_BUILD_TEST OFF)
 FetchContent_Declare(
     optimizationtools
     GIT_REPOSITORY https://github.com/fontanf/optimizationtools.git
-    GIT_TAG 65c8e11224aac1cf6e6e33c040b6b895341ad156
-    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../optimizationtools/"
-    EXCLUDE_FROM_ALL)
+    GIT_TAG e086ec4cfcc9a885cd63f579a99ea5e8f4737005)
+    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../optimizationtools/")
 FetchContent_MakeAvailable(optimizationtools)
+
+# Fetch fontanf/mathoptsolverscmake.
+set(MATHOPTSOLVERSCMAKE_USE_CLP ON)
+set(MATHOPTSOLVERSCMAKE_USE_CBC ON)
+if(STABLESOLVER_USE_HIGHS)
+    set(MATHOPTSOLVERSCMAKE_USE_HIGHS ON)
+endif()
+if(STABLESOLVER_USE_XPRESS)
+    set(MATHOPTSOLVERSCMAKE_USE_XPRESS ON)
+endif()
+FetchContent_Declare(
+    mathoptsolverscmake
+    GIT_REPOSITORY https://github.com/fontanf/mathoptsolverscmake.git
+    GIT_TAG 59fd908038906df649e121f42652a0e8f99cbc67
+    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../mathoptsolverscmake/"
+    EXCLUDE_FROM_ALL)
+FetchContent_MakeAvailable(mathoptsolverscmake)
 
 # Fetch fontanf/localsearchsolver.
 FetchContent_Declare(
@@ -28,18 +56,3 @@ FetchContent_Declare(
     #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../localsearchsolver/"
     EXCLUDE_FROM_ALL)
 FetchContent_MakeAvailable(localsearchsolver)
-
-# Fetch fontanf/mathoptsolverscmake.
-if(STABLESOLVER_USE_CBC)
-    set(MATHOPTSOLVERSCMAKE_USE_CBC ON)
-endif()
-if(STABLESOLVER_USE_CPLEX)
-    set(MATHOPTSOLVERSCMAKE_USE_CPLEX ON)
-endif()
-FetchContent_Declare(
-    mathoptsolverscmake
-    GIT_REPOSITORY https://github.com/fontanf/mathoptsolverscmake.git
-    GIT_TAG 4472814a28a40f4d861ccd757e140835c3a31bd0
-    #SOURCE_DIR "${PROJECT_SOURCE_DIR}/../mathoptsolverscmake/"
-    EXCLUDE_FROM_ALL)
-FetchContent_MakeAvailable(mathoptsolverscmake)
